# serverless-rust

./: .pre-commit-config.yaml  README.md  commitlint.config.cjs
demos/getting-started-rust-cloudflare-workers/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  wrangler.toml
demos/getting-started-rust-cloudflare-workers/src/: lib.rs
demos/mux-serverless-webhook-updates/: Cargo.toml  README.md  wrangler.toml
demos/mux-serverless-webhook-updates/src/: lib.rs  mux_webhook_event.rs  telegram_client.rs
demos/rust-ci-tooling/: Cargo.toml  README.md  commitlint.config.cjs  wrangler.toml
demos/rust-cloudflare-worker-logging/: .dev.vars.example  Cargo.toml  README.md  pnpm-lock.yaml
demos/rust-cloudflare-worker-logging/src/: lib.rs
demos/rust-cloudflare-workers-turnstile-example/: .dev.vars.example  .gitignore  Cargo.toml  README.md  dprint.json  package.json  pnpm-lock.yaml  wrangler.toml
demos/rust-cloudflare-workers-turnstile-example/src/: lib.rs
