[package]
name = "getting-started-rust-cloudflare-workers"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2018"
description = "Getting started with Rust Cloudflare Workers: how you can build your first serverless Rust app including REST requests and sending email."
repository = "https://github.com/rodneylab/serverless-rust/tree/main/demos/getting-started-rust-cloudflare-workers"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
reqwest = { version = "0.11.18", features = ["json"]}
serde = "1.0.163"
worker = "0.0.16"
serde_json = "1.0.96"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
