[package]
name = "getting-started-rust-cloudflare-workers"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
description = "Getting started with Rust Cloudflare Workers: how you can build your first serverless Rust app including REST requests and sending email."
repository = "https://github.com/rodneylab/serverless-rust/tree/main/demos/getting-started-rust-cloudflare-workers"
license = "BSD-3-Clause"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
