[package]
name = "rust-ci-tooling"
version = "0.1.0"
authors = ["Rodney Lab <ask@rodneylab.com>"]
edition = "2018"
description = "Rust CI tooling: how you use can Clippy, commitlint, commitizen, rustfmt and pre-commit in your Rust project with conventional commits."
repository = "https://github.com/rodneylab/serverless-rust/tree/main/demos/rust-ci-tooling"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
