[package]
name = "rust-cloudflare-worker-logging"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/serverless-rust/tree/main/demos/rust-cloudflare-worker-logging"
description = "Rust Cloudflare Worker Logging 🌤️ a quick look at how you can log locally in a dev environment, and in the production using Logtail."

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.24"
chrono-tz = "0.8.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
reqwest = { version = "0.11.18", features = ["json"] }
rmp = "^0.8"
rmp-serde = "1.1.1"
serde = "1"
worker = "0.0.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
